# web-stuff

./: .gitignore  Cargo.toml  Rocket.toml  gen_entity.sh
entity/: Cargo.toml
entity/src/: furry.rs  lib.rs  prelude.rs
migration/src/: lib.rs  m20221117_104400_create_furry_table.rs  m20221122_181200_add_password_to_furry_table.rs  m20221122_183900_create_furry_table.rs
rocket/: Cargo.toml
rocket/locales/en/: main.ftl
rocket/locales/fr/: main.ftl
rocket/locales/nl/: main.ftl
rocket/src/: main.rs  pool.rs
rocket/templates/: body.html.hbs  edit_fur.html.hbs  fur_list.html.hbs  index.html.hbs  login.html.hbs  new_fur.html.hbs  one_fur.html.hbs
rocket/templates/common/: fur_div.html.hbs  header.html.hbs
